content/docs/v1.1/migration.zh.mdx
---
title: 迁移指南
description: 从 JEngine 旧版本迁移到 v1.1 的指南
icon: ArrowRightLeft
---

本指南帮助您从 JEngine 旧版本迁移到 v1.1。

## 从 v1.0.x 升级到 v1.1

<Steps>
<Step>
### 更新 Core 包
删除 `Packages/com.jasonxudeveloper.jengine.core`，通过 UPM 重新安装：
```bash
openupm add com.jasonxudeveloper.jengine.core
```
手动安装请访问 [OpenUPM 页面](https://openupm.com/packages/com.jasonxudeveloper.jengine.core/)。
</Step>

<Step>
### 安装新的 UI 包
MessageBox 已迁移至独立包：
```bash
openupm add com.jasonxudeveloper.jengine.ui
```
手动安装请访问 [OpenUPM 页面](https://openupm.com/packages/com.jasonxudeveloper.jengine.ui/)。
</Step>

<Step>
### 更新 MessageBox 命名空间
将所有使用 MessageBox 的地方的 `using JEngine.Core.Misc;` 替换为 `using JEngine.UI;`。

```csharp
// 之前（v1.0）
using JEngine.Core.Misc;

// 之后（v1.1）
using JEngine.UI;
```
</Step>

<Step>
### 添加 PromptInitializer
创建 `Assets/Scripts/PromptInitializer.cs`，将 MessageBox 连接到新的 Prompt 抽象层：
```csharp
using JEngine.Core;
using JEngine.UI;

public static class PromptInitializer
{
    [RuntimeInitializeOnLoadMethod(RuntimeInitializeLoadType.BeforeSceneLoad)]
    private static void Initialize()
    {
        Prompt.ShowDialogAsync = MessageBox.Show;
    }
}
```
</Step>

<Step>
### 更新 Util 包（可选）
如需 JAction 并行执行支持：
```bash
openupm add com.jasonxudeveloper.jengine.util
```
手动安装请访问 [OpenUPM 页面](https://openupm.com/packages/com.jasonxudeveloper.jengine.util/)。
</Step>
</Steps>

### 破坏性变更汇总

| 变更 | v1.0 | v1.1 |
|------|------|------|
| MessageBox 命名空间 | `JEngine.Core.Misc` | `JEngine.UI` |
| MessageBox 所属包 | `jengine.core` | `jengine.ui`（需单独安装） |
| Bootstrap 对话框 | 直接调用 `MessageBox.Show()` | `Prompt.ShowDialogAsync()`（委托） |

## 从 v1.1.x 升级

直接通过 UPM 更新包即可——v1.1.x 补丁版本之间无破坏性变更。



## 版本对比

### 主要变化
| 功能 | 旧版本 (0.8.x 及以下) | v1.0 |
|-----|---------------------|------|
| 热更方案 | ILRuntime | HybridCLR |
| 性能 | 一般 | 优秀（值类型计算提升10倍） |
| 跨域继承 | 需要适配器 | 无需适配器 |
| 注册函数 | 需要手动注册 | 无需注册 |
| 代码限制 | 较多 | 极少 |
| Unity插件兼容 | 部分兼容 | 完全兼容 |
| 代码保护 | 分块解密 | Obfuz混淆 |
| 平台支持 | 主流平台 | 主流平台 + 小游戏 |



## 迁移准备

<Steps>
<Step>
### 备份项目
迁移前务必备份：完整的项目文件、热更代码、资源文件和配置文件。
</Step>

<Step>
### 环境要求
- Unity 升级到 2022.3 或更高版本
- .NET Framework 升级到 4.7.1+
- 安装必要的 Unity 模块
</Step>

<Step>
### 评估工作量
检查项目中：ILRuntime 特定代码（适配器、注册等）、自定义的框架扩展、第三方插件兼容性。
</Step>
</Steps>

## 从老版本（v1.0.x以下）迁移

<Steps>
<Step>
### 创建新项目
下载 JEngine v1.0，使用 Unity 2022.3+ 打开，安装 HybridCLR。
</Step>

<Step>
### 迁移热更代码

<Accordions>
<Accordion title="移除 ILRuntime 相关代码">
删除：CLR绑定代码、适配器代码、委托注册、值类型绑定。
</Accordion>

<Accordion title="代码结构调整">
<Tabs items={['旧版本', '新版本']}>
<Tab value="旧版本">
```csharp
// ILRuntime 需要的注册
app.DelegateManager.RegisterMethodDelegate<int>();
app.DelegateManager.RegisterFunctionDelegate<int, string>();

// 跨域继承需要适配器
public class MonoBehaviourAdapter : CrossBindingAdaptor { /* ... */ }
```
</Tab>
<Tab value="新版本">
```csharp
// 直接使用，无需任何注册和适配器
public class MyBehaviour : MonoBehaviour
{
    // 直接继承，无需适配器
}
```
</Tab>
</Tabs>
</Accordion>

<Accordion title="修改入口代码">
旧版本可能有 `Init.cs` 或 `Main.cs`，新版本统一使用 `EntryPoint.cs`：
```csharp
public class EntryPoint
{
    public static void Main() => InitGame();
    private static async void InitGame() { await LoadResources(); EnterMainScene(); }
}
```
</Accordion>
</Accordions>
</Step>

<Step>
### 迁移资源

<Tabs items={['旧结构', '新结构']}>
<Tab value="旧结构">
<Files>
  <Folder name="Assets/HotUpdateResources" defaultOpen>
    <Folder name="Dll" />
    <Folder name="Material" />
    <Folder name="Prefab" />
    <Folder name="Scene" />
  </Folder>
</Files>
</Tab>
<Tab value="新结构">
<Files>
  <Folder name="Assets/HotUpdate" defaultOpen>
    <Folder name="Main" defaultOpen>
      <Folder name="Prefabs" />
      <Folder name="Scenes" />
      <Folder name="Materials" />
    </Folder>
    <Folder name="Code" />
    <Folder name="AddOn1（可选）" />
  </Folder>
</Files>
</Tab>
</Tabs>

然后配置 YooAsset：打开 `YooAsset/AssetBundle Collector` → 配置资源收集规则 → 设置打包参数。
</Step>

<Step>
### 迁移配置

<Accordions>
<Accordion title="加密配置">
旧版本使用分块解密，新版本使用整体加密：
1. 选择加密方式（XOR/AES/ChaCha20）
2. 配置加密密钥
3. 更新 `Resources/EncryptConfigs/` 配置
</Accordion>

<Accordion title="服务器配置">
```csharp
DefaultHostServer = "https://cdn.yourdomain.com";
EncryptionOption = EncryptOption.XOR;
TargetPlatform = PlatformType.Regular;
```
</Accordion>
</Accordions>
</Step>

<Step>
### API 迁移

<Accordions>
<Accordion title="ClassBind 与事件">
移除 ClassBind - 直接把热更中的 MonoBehaviour 拖到热更场景上。按钮/UI/Timeline 事件用代码注册，不要在 Unity 面板操作。
</Accordion>

<Accordion title="资源加载">
| 旧版 | 新版 |
|-----|-----|
| `JResource.LoadRes<T>("path")` | `YooAsset.LoadAsset<T>("Assets/HotUpdate/...")` |
</Accordion>

<Accordion title="场景加载">
| 旧版 | 新版 |
|-----|-----|
| `JResource.LoadScene("Name")` | `await Bootstrap.LoadHotUpdateScene("Name")` |
</Accordion>

<Accordion title="UI 系统">
| 旧版 | 新版 |
|-----|-----|
| `JUI.CreatePanel<T>()` | `Instantiate(panelPrefab)` |
</Accordion>
</Accordions>
</Step>

<Step>
### 测试验证

<Tabs items={['功能测试', '性能测试']}>
<Tab value="功能测试">
- [ ] 热更代码加载正常
- [ ] 资源加载正常
- [ ] 场景切换正常
- [ ] UI 显示正常
- [ ] 网络通信正常
- [ ] 数据存储正常
</Tab>
<Tab value="性能测试">
- [ ] 对比启动时间
- [ ] 对比内存占用
- [ ] 对比运行帧率
- [ ] 验证热更新流程
</Tab>
</Tabs>
</Step>
</Steps>

## 常见迁移问题

<Accordions>
<Accordion title="原有的 ILRuntime 适配器怎么处理？">
全部删除。HybridCLR 不需要适配器。
</Accordion>

<Accordion title="委托和事件不工作？">
检查是否有遗留的 ILRuntime 注册代码。HybridCLR 直接使用即可，无需注册。
</Accordion>

<Accordion title="反射代码报错？">
HybridCLR 完全支持反射。检查是否有 ILRuntime 特定的反射代码。注意 Obfuz 可能会对类名和函数名混淆，所以需要[参考这里](https://www.obfuz.com/docs/manual/reflection)。
</Accordion>

<Accordion title="性能没有提升？">
- 确认使用了 HybridCLR 而非 ILRuntime
- 检查是否有性能瓶颈在其他地方
- 使用 Profiler 分析具体问题
</Accordion>

<Accordion title="第三方插件不兼容？">
- 大部分插件在 HybridCLR 下直接可用
- 检查插件是否有 ILRuntime 特定代码
- 更新到插件的最新版本
</Accordion>
</Accordions>

## 迁移后优化

<Accordions>
<Accordion title="代码优化">
- 移除所有 ILRuntime 相关代码
- 简化跨域调用逻辑
- 优化热更新加载流程
</Accordion>

<Accordion title="资源优化">
- 重新组织资源结构
- 优化资源打包策略
- 配置合理的分包方案
</Accordion>

<Accordion title="性能优化">
- 利用 HybridCLR 的性能优势
- 优化值类型使用
- 减少不必要的装箱拆箱
</Accordion>
</Accordions>

## 回滚方案

<Callout type="info">
如果迁移遇到无法解决的问题：
1. **保留旧版本分支** - 随时可以切换回去
2. **渐进式迁移** - 先迁移部分模块
3. **并行开发** - 新功能用 v1.0，旧功能暂时保留
4. **寻求帮助** - 在社区提问或联系技术支持
</Callout>

## 迁移收益

<Cards>
  <Card title="性能提升" description="值类型计算提升10倍，启动更快，内存更少" />
  <Card title="开发效率" description="无需适配器，无需注册委托，调试更方便" />
  <Card title="兼容性" description="支持所有 Unity 插件，完整 C# 特性，小游戏支持" />
  <Card title="维护性" description="代码更简洁，错误更少，升级更容易" />
</Cards>

## 技术支持

<Cards>
  <Card title="常见问题" href="/zh/docs/v1.1/faq" description="常见问题和解决方案" />
  <Card title="示例项目" href="https://github.com/JasonXuDeveloper/JEngine/tree/master/UnityProject" description="参考实现" />
  <Card title="GitHub Issues" href="https://github.com/JasonXuDeveloper/JEngine/issues" description="寻求帮助" />
  <Card title="QQ 群" description="921271552" />
</Cards>

